2003-01-20  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* psyntax.ss (self-evaluating?): Removed.  Guile now provides this
	operator as a primitive procedure.
	(build-data): Quote vectors (psyntax.ss requires this).

2003-01-19  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* psyntax.ss (self-evaluating?): Allow procedures implanted in
	source.  (Guile uses this internally.)

2003-01-16  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* psyntax.ss (build-data): Don't quote self-evaluating expressions
	in output.  (We normally *would* like also these expressions to be
	quoted, but until Guile's native macros and syncase cooperates
	better, it is less destructive not to quote.)
	(self-evaluating?): Removed null? (In Guile, the empty list is not
	self-evaluating).
	(sc-chi): Export chi as sc-chi.
	(external-macro): New syntax type.

	* psyntax.pp: Regenerated.

	* compile-psyntax.scm: Set expansion-eval-closure.

	* boot-9.scm (use-syntax): Return *unspecified*.

	* syncase.scm: Set expansion-eval-closure to
	the-syncase-eval-closure during booting so that variables are
	created in the correct module.
	(syncase): Set expansion-eval-closure.
	(define-syntax define-syntax-public eval-when fluid-let-syntax
	identifier-syntax let-syntax letrec-syntax syntax syntax-case
	syntax-rules with-syntax include): Removed definitions (these are
	created from within psyntax.pp).
	Enable expansion of Guile macros during a syntax-case
	transformation.

2003-01-10  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* occam-channel.scm (make-channel): Renamed from channel.
	(make-timer): New function.

	* Makefile.am (ice9_sources): Added occam-channel.scm.

	* occam-channel.scm: New file.  Implements occam-like channels.

2002-12-28  Neil Jerram  <neil@ossau.uklinux.net>

	* boot-9.scm (module-defined-hook): New hook, run whenever a new
	module is defined.
	(process-define-module): Run this hook.

2002-12-18  Mikael Djurfeldt  <mdj@kvast.blakulla.net>
