@@ -1,5 +1,7 @@
 2003-01-20  Mikael Djurfeldt  <djurfeldt@nada.kth.se>
 
+	* occam-channel.scm (alt): New syntax.
+
 	* psyntax.ss (self-evaluating?): Removed.  Guile now provides this
 	operator as a primitive procedure.
 	(build-data): Quote vectors (psyntax.ss requires this).
